# DuelSandbox

./: .gitignore  CMakeLists.txt  README.md
src/: animation_system.cpp  animation_system.hpp  main.cpp  skeleton.cpp  skeleton.hpp
src/entity/: api.cpp  api.hpp  creature.cpp  creature.hpp  generic_human.cpp  generic_human.hpp  player_human.cpp  player_human.hpp  system.cpp  system.hpp  system.inl
src/renderer/: terrain.cpp  terrain.fragment.tzsl  terrain.hpp
src/skeleton/: api.cpp  api.hpp  human_male.cpp  human_male.hpp
src/skeletons/: human_male.cpp  human_male.hpp
